# gkit2light-m2

./: .gitignore  CMakeLists.txt
data/: Champi.mtl
data/shaders/: cube1.glsl  cube2.glsl  decal.glsl  draw_shadows.glsl  shader.glsl  shader_tp2.glsl  shadowMap.glsl  shadows.glsl  texcoords.glsl  textures.glsl  toonShader.glsl
src/gKit/: app.cpp  app_camera.cpp  app_time.cpp  mesh.cpp  window.cpp
src/tp/: Utils.h  tp1.cpp  tp2.cpp  tp3.cpp  tp4.cpp  tp5.cpp
src/tp/shaders/tp2/: depth_shader.glsl  shader.glsl
src/tp/shaders/tp4/: compute_buffer.glsl  compute_buffer2.glsl
src/tp/shaders/tp5/: compute.glsl  frustum.glsl  shader.glsl
tutos/: mesh_data.cpp  mesh_data.h  mesh_viewer.cpp  tuto1.cpp  tuto10.cpp  tuto7.cpp  tuto7_camera.cpp  tuto9_groups.cpp  tuto9_materials.cpp  tuto_decal.cpp  tuto_rayons.cpp  tuto_shadows.cpp
tutos/M2/: tuto_mdi.cpp  tuto_raytrace_compute.cpp
